# ml-compress-and-compare

./: .gitignore  ACKNOWLEDGMENTS  CITATION.cff  LICENSE  README.md
comparison_interface/: README.md  package-lock.json  package.json  (+1 more)
model_server/: MANIFEST.in  README.md  pyproject.toml
model_server/examples/celeba_blonde_classification/: celeba_blonde_classification.py  celeba_models.json
model_server/examples/cifar10_image_classification/: cifar10_image_classification.py  cifar10_image_classification_models.json
model_server/examples/image_compression_experiments/: README.md  celeba.py  cifar10.py  compression.py  compression_metrics.py  compression_performance.py  compression_utils.py  experiments.py  imagenet.py  models.py  resnet.py  sensitivity.py  training.py  usage_example.ipynb  utils.py
model_server/examples/imagenet_image_classification/: imagenet_image_classification.py  imagenet_models.json  imagenet_models_userstudy_part1.json  imagenet_models_userstudy_tutorial.json
model_server/examples/t5_squad/: make_t5_models.py  models.json  run_server_t5.py  t5_utils.py  trainer_seq2seq_qa.py
model_server/interactive_compression/: __init__.py  server.py  sockets.py  torch.py  utils.py
model_server/interactive_compression/components/: __init__.py  instances.py  layers.py  overview.py
model_server/interactive_compression/inspectors/: base.py  pytorch.py  pytorch_activations.py
model_server/interactive_compression/monitors/: __init__.py  local_monitor.py  pytorch_metric_utils.py
model_server/interactive_compression/runners/: local_runner.py
(+56 files in other folders)
